# Bee-on-Artifical-Flower

./: .gitignore  BeeDetection.py  BoudingQuadDemo.py  CMakeLists.txt  LICENSE  README.md  data.py  datasetFormater.py  geometry.py  gridBoundingBox.py  gridExtraction.py  grid_extraction.ipynb  main.py  processing.py  train.sh  videoDemo.py
dataset/: roi-1.npy  roi-3.npy
dataset/annotations/: BAF-COCO-1.json
dataset/roi/: roi-2.npy
example/: BeeDetection.py  BoudingQuadDemo.py
report/: report-training.py
report/data/training-result/: results-v1.txt  results-v2.txt  results-v3.txt  results-v4.txt
src/coco/: format.py
src/cpp/: main.cpp
src/data/: data.py  video.py
src/display/: plot.py
src/example/: BeeDetection.py  BoudingQuadDemo.py  demoOnPicture.py  demoOnVideo.py
src/geometry/: boundingBox.py  geometry.py  markovQBox.py
src/processing/: thresholding.py
src/python/: TraditionalDetection.ipynb  dataProcessing.ipynb  processing.ipynb  utils.py  yolo.py
src/python/data/: video.py
src/python/geometry/: boundingBox.py  geometry.py  markovQBox.py
src/python/yolo/: yolo.py
src/yolo/: yolo.py
training/: hyp.scratch.custom.yaml  tl-training.yaml  train.ps1  train.sh  yolov7-w6-custom.yaml
